Changed site Login Id

--- a/gigyaLogin.html
+++ b/gigyaLogin.html
@@ -8,7 +8,7 @@
 	<!-- socialize.js script should only be included once -->
 <script type="text/javascript" src="http://cdn.gigya.com/js/socialize.js?apiKey=3_S6dE7t84TPm8qRgUGpISfb3qmu2yE1qMLWPaao-ZBbJo2bb6MRU-DD_N5tHMe8iP">
 	{
-		siteName: 'canald.local (local key for dev purpose)'
+		siteName: 'louisthomas.github.io (local key for dev purpose)'
 		,enabledProviders: 'facebook,twitter,googleplus,linkedin,yahoo,microsoft,aol,foursquare,orkut,instagram,vkontakte,renren,QQ,Sina,kaixin'
 	}
 </script>
