Add Conviva plugin

--- a/brightcove.html
+++ b/brightcove.html
@@ -31,7 +31,7 @@
     "adEnabled": true
     },
     "content": {
-    "refId": "3a672015b3409ca98de2591b23846ed982c17a0e",
+    "refId": "test123",
     "videoType": "",
     "autoStart": true,
     "rating": "",
@@ -43,6 +43,9 @@
     "streamSenseC2": "",
     "videoMetrixC2": "",
     "siteTag": ""
+    },
+    "conviva":{
+    "customerKey": "7f2330ba2a840abea7033886f7908af9e2104ba8"
     }
     }
 '>
