--- a/brightcove.html
+++ b/brightcove.html
@@ -14,6 +14,7 @@
         <link href="//players.brightcove.net/videojs-ima3/videojs.ima3.min.css" rel="stylesheet">
         <script src="/javascripts/require.js"></script>
         <script src="/javascripts/config.js"></script>
+        <script src="/javascripts/main-built.js"></script>
         <!-- <script async="" src="http://b.scorecardresearch.com/beacon.js"></script>-->
     </head>
 
